k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erp-app
  labels:
    app: erp-app
spec:
  type: ClusterIP
  selector:
    app: erp-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
